--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "daily_leet"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 typer = {extras = ["all"], version = "^0.7.0"}
+shellingham = "^1.5.1"
+requests = "^2.28.2"
 
 
 [build-system]
