--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "daily-leet"
-version = "0.2.4"
+version = "0.2.5"
 description = ""
 authors = ["madmaxieee <76544194+madmaxieee@users.noreply.github.com>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ requests = "^2.28.2"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^22.6.0", allow-prereleases = true }
+typer-cli = "^0.0.13"
 
 [build-system]
 requires = ["poetry-core"]
